--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -1,3 +1,8 @@
+on early-boot
+    write /sys/devices/i2c-10/10-0047/leds/LED1_R/brightness 255
+    write /sys/devices/i2c-10/10-0047/leds/LED1_G/brightness 255
+    write /sys/devices/i2c-10/10-0047/leds/LED1_B/brightness 255
+
 on boot
     # LM3560/cameralight
     chown system camera /sys/devices/i2c-10/10-0053/torch_enable
