--- a/project.config
+++ b/project.config
@@ -5,7 +5,7 @@
 	action = rebase if necessary
 [access "refs/heads/*"]
 	create = group Sony Xperia SP maintainers.
-	push = group Sony Xperia SP maintainers.
+	push = +force group Sony Xperia SP maintainers.
 	label-Code-Review = -2..+2 group Sony Xperia SP maintainers.
 	label-Verified = -1..+1 group Sony Xperia SP maintainers.
 	submit = group Sony Xperia SP maintainers.
