--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -19,6 +19,7 @@ import init.sony.usb.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
+
     symlink /data/tombstones /tombstones
     write /sys/block/mmcblk0/queue/read_ahead_kb 256
     write /sys/block/mmcblk1/queue/read_ahead_kb 256
@@ -202,6 +203,9 @@ on boot
     write /proc/sys/net/ipv6/conf/rmnet_usb1/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet_usb2/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet_usb3/accept_ra 2
+
+    # Enable logging of the wake up reasons in the kernel log
+    write /sys/module/msm_show_resume_irq/parameters/debug_mask 1
 
     # To prevent out of order acknowledgements from making
     # connection tracking to treat them as not belonging to
