--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -288,8 +288,6 @@ on post-fs-data
 
     rm /data/local/tmp/adreno_config.txt
 
-    write /sys/block/mmcblk0/queue/scheduler fiops
-
     # Enable Power modes and set the CPU Freq Sampling rates
     write /sys/module/rpm_resources/enable_low_power/L2_cache 1
     write /sys/module/rpm_resources/enable_low_power/pxo 1
@@ -546,6 +544,9 @@ service setup_fs /system/bin/setup_fs /dev/block/platform/msm_sdcc.1/by-name/Use
     user root
     group root
     oneshot
+
+on property:sys.boot_completed=1
+    setprop sys.io.scheduler bfq
 
 # Powersave
 on property:sys.perf.profile=0
