--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -492,11 +492,10 @@ service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
     disabled
     oneshot
 
-# Start system_monitor
-service system_monitor /system/bin/system_monitor
-    socket sysmon stream 0660 root system
-    class core
+service thermanager /system/bin/thermanager /system/etc/thermanager.xml
+    class main
     user root
+    group root
 
 # Healthd
 service charger /sbin/healthd -c
