huashan: Use open source thermanager
 - WIP

Change-Id: I0367eb0d21035ced25d4343f156b29605b973a91
Signed-off-by: Mrcl1450 <marcelo-fil@outlook.com>

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -497,11 +497,10 @@ service illumination /system/bin/illumination_service
     class main
     user root
 
-# Start system_monitor
-service system_monitor /system/bin/system_monitor
-    socket sysmon stream 0660 root system
-    class core
+service thermanager /system/bin/thermanager /system/etc/thermanager.xml
+    class main
     user root
+    group root
 
 # Healthd
 service charger /sbin/healthd -c
