huashan: Build the BoringSSL compatibility wrapper
Change-Id: I241ab36716161d8deee211af2dc743b77d97d6e2

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -23,6 +23,9 @@ on early-init
     symlink /data/tombstones /tombstones
 
 on init
+    # Preload the BoringSSL wrapper
+    export LD_PRELOAD "libboringssl-compat.so"
+
     symlink /dev/socket /tmp
 
     mkdir /dev/bus 0755 root root
