--- a/devicesettings/AndroidManifest.xml
+++ b/devicesettings/AndroidManifest.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:sharedUserId="android.uid.system"
     package="com.cyanogenmod.settings.device"
-    android:versionCode="1"
-    android:versionName="1.0"
-    android:sharedUserId="android.uid.system">
+    android:versionCode="2"
+    android:versionName="2.0">
 
+    <uses-permission android:name="android.permission.DEVICE_POWER" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <uses-sdk
         android:minSdkVersion="21"
@@ -25,6 +28,25 @@
         <service android:name="com.cyanogenmod.settings.device.GloveModeService"
                  android:permission="GloveModeService">
         </service>
+
+        <service android:name="com.cyanogenmod.settings.device.SensorsDozeService"
+                 android:permission="SensorsDozeService">
+        </service>
+
+        <activity
+            android:name=".TouchscreenGestureSettings"
+            android:label="@string/screen_gestures_panel_title"
+            android:theme="@android:style/Theme.Material.Settings">
+            <intent-filter>
+                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
+            </intent-filter>
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.device" />
+            <meta-data
+                android:name="com.android.settings.icon"
+                android:resource="@drawable/ic_settings_gestures" />
+        </activity>
 
     </application>
 </manifest>
