huashan: Add mpdecision file socket creation into init
Change-Id: I8bd2586fadd6b82983bbbb9b6dbee1d29d3aca02

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -417,6 +417,7 @@ service mpdecision /system/bin/mpdecision --avg_comp
     class late_start
     user root
     group system
+    socket mpdecision stream 0660 root system
     disabled
 
 service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
