--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -327,10 +327,10 @@ service netmgrd /system/bin/netmgrd
     group radio
 
 # start GNSS/Sensor interface daemon
-service gsiff_daemon /system/bin/gsiff_daemon
-    class late_start
-    user system
-    group gps qcom_oncrpc net_raw
+#service gsiff_daemon /system/bin/gsiff_daemon
+#    class late_start
+#    user system
+#    group gps qcom_oncrpc net_raw
 
 service qseecomd /system/bin/qseecomd
     class late_start
@@ -419,10 +419,10 @@ service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
     disabled
     oneshot
 
-service thermanager /system/bin/thermanager /system/etc/thermanager.xml
-    class main
-    user root
-    group root
+#service thermanager /system/bin/thermanager /system/etc/thermanager.xml
+#    class main
+#    user root
+#    group root
 
 # Healthd
 service charger /sbin/healthd -c
