--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -259,7 +259,7 @@ on post-fs-data
     mkdir /data/audio 0770 media audio
 
     # Camera
-    mkdir /data/camera 0771 root camera
+    mkdir /data/misc/camera 0771 root camera
 
     # Create /data/time folder for time-services
     mkdir /data/time 0700 system system
@@ -327,10 +327,10 @@ service netmgrd /system/bin/netmgrd
     group radio
 
 # start GNSS/Sensor interface daemon
-service gsiff_daemon /system/bin/gsiff_daemon
-    class late_start
-    user system
-    group gps qcom_oncrpc net_raw
+#service gsiff_daemon /system/bin/gsiff_daemon
+#    class late_start
+#    user system
+#    group gps qcom_oncrpc net_raw
 
 service qseecomd /system/bin/qseecomd
     class late_start
