--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -259,7 +259,7 @@ on post-fs-data
     mkdir /data/audio 0770 media audio
 
     # Camera
-    mkdir /data/camera 0771 root camera
+    mkdir /data/misc/camera 0771 root camera
 
     # Create /data/time folder for time-services
     mkdir /data/time 0700 system system
@@ -410,6 +410,7 @@ on property:ro.data.large_tcp_window_size=true
 service mpdecision /system/bin/mpdecision --avg_comp
     class late_start
     user root
+    socket mpdecision stream 0660 root system
     group system
 
 service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
