huashan: set bfq as default io scheduler
Change-Id: I0db835189568c46c7543b50712cf3fac5840ce59
Signed-off-by: Mrcl1450 <marcelo-fil@outlook.com>

--- a/rootdir/init.qcom.power.rc
+++ b/rootdir/init.qcom.power.rc
@@ -41,6 +41,10 @@ on enable-low-power
 on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpufreq/interactive/boost 0
 
+on property:sys.boot_completed=1
+    setprop sys.io.scheduler bfq
+    write /sys/block/mmcblk1/queue/scheduler bfq
+
 on charger
     # Enable Power modes and set the CPU Freq Sampling rates
     write /sys/module/msm_fb/parameters/align_buffer 0
