--- a/rootdir/init.qcom.power.rc
+++ b/rootdir/init.qcom.power.rc
@@ -35,6 +35,10 @@ on enable-low-power
     write /sys/devices/system/cpu/cpufreq/interactive/io_is_busy 1
     write /sys/devices/system/cpu/cpufreq/interactive/sampling_down_factor 100000
 
+on property:sys.boot_completed=1
+    setprop sys.io.scheduler bfq
+    write /sys/block/mmcblk1/queue/scheduler bfq
+
 on charger
     # Enable Power modes and set the CPU Freq Sampling rates
     write /sys/module/msm_fb/parameters/align_buffer 0
