--- a/rootdir/init.qcom.power.rc
+++ b/rootdir/init.qcom.power.rc
@@ -39,6 +39,10 @@ on enable-low-power
 
     write /sys/class/kgsl/kgsl-3d0/pwrscale/trustzone/governor "ondemand"
 
+on property:sys.boot_completed=1
+    setprop sys.io.scheduler bfq
+    write /sys/block/mmcblk1/queue/scheduler bfq
+
 on charger
     # Enable Power modes and set the CPU Freq Sampling rates
     write /sys/module/msm_fb/parameters/align_buffer 0
