--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -44,11 +44,6 @@ on fs
     chown system system /lta-label
     chmod 0555 /lta-label
 
-    restorecon /data/etc/bluetooth_bdaddr
-    restorecon /data/etc/wlan_macaddr0
-    restorecon /data/etc/wlan_macaddr1
-    restorecon /data/etc/wlan_macaddr2
-    restorecon /data/etc/wlan_macaddr3
     restorecon /data/misc/audio/mbhc.bin
     restorecon /data/misc/audio/wcd9310_anc.bin
 
@@ -191,9 +186,6 @@ on boot
 
 # msm specific files that need to be created on /data
 on post-fs-data
-    # Used by taimport for MAC addresses
-    mkdir /data/etc 0775 root shell
-
     # Create directory for TZ Apps
     mkdir /data/misc/qsee 0770 system system
 
@@ -205,9 +197,6 @@ on post-fs-data
 
     # to observe dnsmasq.leases file for dhcp information of soft ap.
     chown dhcp system /data/misc/dhcp
-
-    # Update WIFI MAC address
-    mkdir /data/misc/wifi/prima 0775 wifi wifi
 
     write /sys/module/wcnss_ssr_8960/parameters/enable_riva_ssr 1
     write /sys/devices/platform/wcnss_wlan.0/serial_number ${ro.serialno}
@@ -284,20 +273,18 @@ service tad_static /sbin/tad_static /dev/block/mmcblk0 1,16
     socket tad stream 0666 system system
     class core
 
-service taimport /system/bin/taimport
-    class late_start
+# Wi-Fi and BT MAC addresses
+service macaddrsetup /system/bin/macaddrsetup /sys/devices/platform/wcnss-wlan.0/wcnss_mac_addr
     user root
-    group system
+    disabled
     oneshot
 
-# Update WIFI MAC address
-service mac-update /system/bin/mac-update
-    class main
-    user wifi
-    oneshot
-
-on service-exited-taimport
-    start mac-update
+on property:vold.post_fs_data_done=1
+    # Generate Bluetooth MAC address file only when /data is ready
+    start macaddrsetup
+    # Wait for the file to be created by macaddrsetup
+    wait /data/etc/bluetooth_bdaddr
+    chown bluetooth bluetooth /data/etc/bluetooth_bdaddr
 
 # Bluetooth
 service hciattach /system/bin/sh /system/etc/init.qcom.bt.sh
