--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -43,11 +43,6 @@ on fs
     chown system system /lta-label
     chmod 0555 /lta-label
 
-    restorecon /data/etc/bluetooth_bdaddr
-    restorecon /data/etc/wlan_macaddr0
-    restorecon /data/etc/wlan_macaddr1
-    restorecon /data/etc/wlan_macaddr2
-    restorecon /data/etc/wlan_macaddr3
     restorecon /data/misc/audio/mbhc.bin
     restorecon /data/misc/audio/wcd9310_anc.bin
 
@@ -196,9 +191,6 @@ on boot
 
 # msm specific files that need to be created on /data
 on post-fs-data
-    # Used by taimport for MAC addresses
-    mkdir /data/etc 0775 root shell
-
     # Create directory for TZ Apps
     mkdir /data/misc/qsee 0770 system system
 
@@ -210,9 +202,6 @@ on post-fs-data
 
     # to observe dnsmasq.leases file for dhcp information of soft ap.
     chown dhcp system /data/misc/dhcp
-
-    # Update WIFI MAC address
-    mkdir /data/misc/wifi/prima 0775 wifi wifi
 
     write /sys/module/wcnss_ssr_8960/parameters/enable_riva_ssr 1
     write /sys/devices/platform/wcnss_wlan.0/serial_number ${ro.serialno}
@@ -279,32 +268,24 @@ on property:init.svc.wpa_supplicant=stopped
 
 # SONY: TrimArea Daemon
 # Last 2 args: start block(blk size 128k), number of blocks(partitionsize(kb)/128(kb))
-service tad_static /sbin/tad_static /dev/block/platform/msm_sdcc.1/by-name/TA 0,16
+service tad_static /sbin/tad_static /dev/block/mmcblk0 1,16
     user root
     group root
     socket tad stream 0660 system system
     class core
+    seclabel u:r:tad:s0
 
-service taimport /system/bin/taimport
+# Wi-Fi and BT MAC addresses
+service macaddrsetup /system/bin/macaddrsetup /sys/devices/platform/wcnss_wlan.0/wcnss_mac_addr
     class late_start
     user root
-    group system
     oneshot
-
-# Update WIFI MAC address
-service mac-update /system/bin/mac-update
-    class main
-    user wifi
-    oneshot
-
-on service-exited-taimport
-    start mac-update
 
 # Bluetooth
 service hciattach /system/bin/sh /system/etc/init.qcom.bt.sh
     class late_start
     user bluetooth
-    group bluetooth net_bt_admin system net_bt_stack
+    group qcom_oncrpc bluetooth net_bt_admin system
     disabled
     oneshot
 
@@ -347,10 +328,10 @@ service p2p_supplicant /system/bin/wpa_supplicant \
     -I/system/etc/wifi/wpa_supplicant_overlay.conf \
     -puse_p2p_group_interface=1 \
     -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
-#   we will start as root and wpa_supplicant will switch to user wifi
-#   after setting up the capabilities required for WEXT
-#   user wifi
-#   group wifi inet keystore
+    #   we will start as root and wpa_supplicant will switch to user wifi
+    #   after setting up the capabilities required for WEXT
+    #   user wifi
+    #   group wifi inet keystore
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
@@ -448,6 +429,7 @@ service wcnss-service /system/bin/wcnss_service
     class late_start
     user system
     group system wifi
+    disabled
     oneshot
 
 service secchan /system/bin/secchand
