haushan: provide VectorImpl
Change-Id: Ia147ce0f6f6810776fc9f33ff29b06be178ea41d

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -25,6 +25,7 @@ on early-init
 on init
     # Preload the BoringSSL wrapper
     export LD_PRELOAD "libboringssl-compat.so"
+    export LD_PRELOAD "libsony.so"
 
     symlink /dev/socket /tmp
 
