--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -23,8 +23,7 @@ on early-init
     symlink /data/tombstones /tombstones
 
 on init
-    # Preload the BoringSSL wrapper
-    export LD_PRELOAD "libboringssl-compat.so"
+    export LD_PRELOAD "libsony.so"
 
     symlink /dev/socket /tmp
 
