haushan: provide VectorImpl
Change-Id: Ia147ce0f6f6810776fc9f33ff29b06be178ea41d

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -23,6 +23,8 @@ on early-init
     symlink /data/tombstones /tombstones
 
 on init
+    export LD_PRELOAD "libsony.so"
+
     symlink /dev/socket /tmp
 
     mkdir /dev/bus 0755 root root
