huashan: Update the thermanager configuration
 * Bind the SP's 2 LCD backlight levels for proper mitigations
 * Set GPU correct frequencies for mitigations
 * Remove unused & empty temperature sensors
 * Start MPDecision on boot completed to allow 2nd CPU cpufreq init

Change-Id: Ib6b2058a2cd306e84d5c340a6b65d66d3ca3c230
Signed-off-by: AdrianDC <radian.dc@gmail.com>

--- a/rootdir/init.qcom.power.rc
+++ b/rootdir/init.qcom.power.rc
@@ -40,6 +40,7 @@ on enable-low-power
 
 on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpufreq/interactive/boost 0
+    start mpdecision
 
 on charger
     # Enable Power modes and set the CPU Freq Sampling rates
