--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -415,6 +415,7 @@ service mpdecision /system/bin/mpdecision --avg_comp
     class late_start
     user root
     group system
+    disabled
 
 service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
     class late_start
