--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -23,6 +23,9 @@ on early-init
     symlink /data/tombstones /tombstones
 
 on init
+    # Symbols required for SONY blobs
+    export LD_SHIM_LIBS "/system/lib/libqc-opt.so|/system/lib/libshim_qcopt.so"
+
     symlink /dev/socket /tmp
 
     mkdir /dev/bus 0755 root root
