huashan: Extend the specific MAC importation
 * Redesign the macaddrsetup to handle multiple data elements,
     a management of the 2 TrimAreas and an output for the WiFi SN.

 * Properly init the WLAN Serial then WiFi to allow the module
     to generate the additionnal internal addresses and to boot.

 * The WCNSS Serial number is a 8 chars hexadecimal value,
     and the SONY serial number originally written was an alphabetic
     10 chars string, therefore, retrieve the last 4 chars
     and set the serial number with their hex ASCII value.

 * In case the TA Partition wouldn't be accessed through libta,
     the WiFi will work properly but with the default MAC.

Change-Id: I578ef263a5135b46a14cd4302eb3a83436c4a0b8
Signed-off-by: AdrianDC <radian.dc@gmail.com>

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -55,6 +55,8 @@ on early-boot
 
     write /sys/module/pm8921_charger/parameters/enable_lowbatt_detect 1
 
+    write /dev/wcnss_wlan 1
+
 on boot
     exec /system/bin/btnvtool -O
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
@@ -204,8 +206,6 @@ on post-fs-data
     chown dhcp system /data/misc/dhcp
 
     write /sys/module/wcnss_ssr_8960/parameters/enable_riva_ssr 1
-    write /sys/devices/platform/wcnss_wlan.0/serial_number ${ro.serialno}
-    write /dev/wcnss_wlan 1
 
     mkdir /tombstones/modem 0771 system system
     mkdir /tombstones/lpass 0771 system system
@@ -276,7 +276,7 @@ service tad_static /sbin/tad_static /dev/block/mmcblk0 1,16
     seclabel u:r:tad:s0
 
 # Wi-Fi and BT MAC addresses
-service macaddrsetup /system/bin/macaddrsetup /sys/devices/platform/wcnss_wlan.0/wcnss_mac_addr
+service macaddrsetup /system/bin/macaddrsetup
     class late_start
     user root
     oneshot
