huashan: Improve the healthd offline charger
 * Use a custom resources created out of the original SONY charger
 * Allow Android to properly boot directly from the offline charger

 * Thanks to Michael Bestas for the reboot hints

Change-Id: Icf01407e57ba94274d3ca558fbf71be2864601d0
Signed-off-by: AdrianDC <radian.dc@gmail.com>

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -189,6 +189,9 @@ on boot
     # an ack packet comes out of order
     write /proc/sys/net/netfilter/nf_conntrack_tcp_be_liberal 1
 
+on charger
+    stop bootlogo
+
 # msm specific files that need to be created on /data
 on post-fs-data
     # Create directory for TZ Apps
