--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -216,6 +216,9 @@ on boot
     # an ack packet comes out of order
     write /proc/sys/net/netfilter/nf_conntrack_tcp_be_liberal 1
 
+on charger
+    stop bootlogo
+
 # msm specific files that need to be created on /data
 on post-fs-data
     # Used by taimport for MAC addresses
