--- a/rootdir/init.qcom.power.rc
+++ b/rootdir/init.qcom.power.rc
@@ -47,6 +47,12 @@ on property:sys.boot_completed=1
     write /sys/block/mmcblk1/queue/scheduler bfq
 
 on charger
+    write /sys/class/android_usb/android0/enable 0
+    write /sys/class/android_usb/android0/idVendor 0FCE
+    write /sys/class/android_usb/android0/idProduct E195
+    write /sys/class/android_usb/android0/functions mass_storage
+    write /sys/class/android_usb/android0/enable 1
+
     # Enable Power modes and set the CPU Freq Sampling rates
     write /sys/module/msm_fb/parameters/align_buffer 0
     write /sys/devices/system/cpu/cpu1/online 1
