huashan: Init btnvtool as a proper service
 * Avoid "Starting service 'exec 1 (/system/bin/btnvtool)'"

Change-Id: I2572cceb83673b9fa8b00fc141a078ee096d6b73
Signed-off-by: AdrianDC <radian.dc@gmail.com>

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -80,7 +80,7 @@ on early-boot
     write /dev/wcnss_wlan 1
 
 on boot
-    exec /system/bin/btnvtool -O
+    start btnvtool
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
@@ -302,6 +302,10 @@ service tad_static /sbin/tad_static /dev/block/mmcblk0 1,16
 service macaddrsetup /system/bin/macaddrsetup
     class late_start
     user root
+    oneshot
+
+service btnvtool /system/bin/btnvtool -O
+    disabled
     oneshot
 
 # Bluetooth
