huashan: Enable the backlight on charger boot
Change-Id: I70789c5e0e5671c3a997ab4c95708e575ea45e80
Signed-off-by: AdrianDC <radian.dc@gmail.com>

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -191,6 +191,11 @@ on boot
 on charger
     stop bootlogo
 
+on property:sys.boot_from_charger_mode=1
+    # Display backlight
+    write /sys/class/leds/lcd-backlight1/brightness 63
+    write /sys/class/leds/lcd-backlight2/brightness 63
+
 # msm specific files that need to be created on /data
 on post-fs-data
     # Create directory for TZ Apps
