--- a/rootdir/init.qcom.power.rc
+++ b/rootdir/init.qcom.power.rc
@@ -49,6 +49,12 @@ on property:sys.boot_completed=1
     write /sys/block/mmcblk1/queue/scheduler bfq
     write /sys/block/mmcblk1/queue/iosched/slice_idle 0
 
+    # KSM Settings
+    write /sys/kernel/mm/ksm/deferred_timer 1
+    write /sys/kernel/mm/ksm/pages_to_scan 100
+    write /sys/kernel/mm/ksm/sleep_millisecs 2000
+    write /sys/kernel/mm/ksm/run 1
+
 on charger
     # Enable Power modes and set the CPU Freq Sampling rates
     write /sys/module/msm_fb/parameters/align_buffer 0
