huashan: Init slice_idle to 0 for mmcblk1
 * Also add a few comments for boot completed actions

Change-Id: I511d4d6ee90c0a558d631694f04577a8d3baadbf

--- a/rootdir/init.qcom.power.rc
+++ b/rootdir/init.qcom.power.rc
@@ -41,10 +41,14 @@ on enable-low-power
     write /sys/class/kgsl/kgsl-3d0/pwrscale/trustzone/governor "ondemand"
 
 on property:sys.boot_completed=1
+    # CPU Settings
     write /sys/devices/system/cpu/cpufreq/interactive/boost 0
     start mpdecision
+
+    # IO Schedulers
     setprop sys.io.scheduler bfq
     write /sys/block/mmcblk1/queue/scheduler bfq
+    write /sys/block/mmcblk1/queue/iosched/slice_idle 0
 
 on charger
     write /sys/class/android_usb/android0/enable 0
