--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -196,6 +196,14 @@ on property:sys.boot_from_charger_mode=1
     write /sys/class/leds/lcd-backlight1/brightness 63
     write /sys/class/leds/lcd-backlight2/brightness 63
 
+    # Disable charging LEDs
+    write /sys/class/leds/LED1_R/brightness 0
+    write /sys/class/leds/LED1_R/led_current 0
+    write /sys/class/leds/LED1_G/brightness 0
+    write /sys/class/leds/LED1_G/led_current 0
+    write /sys/class/leds/LED1_B/brightness 0
+    write /sys/class/leds/LED1_B/led_current 0
+
 # msm specific files that need to be created on /data
 on post-fs-data
     # Create directory for TZ Apps
