huashan: Update FM Radio to static driver
huashan: Added support for static linking for radio-iris-transport module

This patch makes iris FM driver static similar
to the drivers for other targets.

Change-Id: I24f2e4d415f287f1ab0663613ad5e5f209e96524

huashan: Fix the issue with fm_dl service

- Open the SMD channel dynamically instead of bootup.
- Remove dev node access permission to 3rd party application.

Change-Id: I7486a59c298acbeede9f51145475f937a6e8de36

huashan: turn on bt only if transport is smd

 - Add missing license header
 - also small cleanup

Change-Id: I1102ec52cfda3918719f93679abdf4e83bdccadb

huashan: Fix the issue with fm_dl service

- Open the SMD channel dynamically instead of bootup.
- Remove dev node access permission to 3rd party application.

Change-Id: Iadb0b03108679f579cf4c9e58bcde2f3b9915ff7

huashan: Fix the issue with fm patch downloader

Created separate fm directory to store calibration file

Change-Id: I20c3e10b028ef3e666591b2dbcfcb3ad3554ff7d

huashan: Use new fm calibration data file path

Change-Id: I04cdacad94d5c3f2d865475da5a52e6a54187a34

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -89,8 +89,10 @@ on boot
     chown bluetooth bluetooth /proc/bluetooth/sleep/proto
     chown system system /sys/module/sco/parameters/disable_esco
     chown bluetooth bluetooth /sys/module/hci_smd/parameters/hcismd_set
+    chown system system /sys/module/radio_iris_transport/parameters/fmsmd_set
     chmod 0660 /sys/module/bluetooth_power/parameters/power
     chmod 0660 /sys/module/hci_smd/parameters/hcismd_set
+    chmod 0660 /sys/module/radio_iris_transport/parameters/fmsmd_set
     chmod 0660 /sys/class/rfkill/rfkill0/state
     chmod 0660 /proc/bluetooth/sleep/proto
     chown bluetooth bluetooth /dev/ttyHS0
@@ -254,6 +256,10 @@ on post-fs-data
     mkdir /tombstones/dsps 0771 system system
     mkdir /tombstones/mdm 0771 system system
     mkdir /tombstones/mdm2 0771 system system
+
+    # Create FM dir for patchdownloader
+    mkdir /data/misc/fm 0770 system system
+    chmod 0770 /data/misc/fm
 
     # Create directory used by audio subsystem
     mkdir /data/misc/audio 0770 audio audio
@@ -445,7 +451,7 @@ service mpdecision /system/bin/mpdecision --avg_comp
 
 service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
     class late_start
-    user root
+    user system
     group system
     disabled
     oneshot
