--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -203,6 +203,9 @@ on property:sys.boot_from_charger_mode=1
     write /sys/class/leds/LED1_B/brightness 0
     write /sys/class/leds/LED1_B/led_current 0
 
+    # Enable the normal CPU configurations
+    trigger enable-low-power
+
 # msm specific files that need to be created on /data
 on post-fs-data
     # Create directory for TZ Apps
