huashan: init: Add mpdecision to readproc group
Adding mpdecision to readproc group, to allow
read/write access on /proc node.

Change-Id: Iab12fa67239ea831362b18d2892c4f77670a9cad

--- a/rootdir/init.board.perf.rc
+++ b/rootdir/init.board.perf.rc
@@ -111,6 +111,6 @@ on property:sys.boot_completed=1
 service mpdecision /system/bin/mpdecision --avg_comp
     class late_start
     user root
-    group system
+    group root readproc
     socket mpdecision stream 0660 root system
     disabled
