Rename group Sony Xperia SP maintainers. to Sony Xperia SP maintainers

--- a/project.config
+++ b/project.config
@@ -4,8 +4,8 @@
 [submit]
 	action = rebase if necessary
 [access "refs/heads/*"]
-	create = group Sony Xperia SP maintainers.
-	push = +force group Sony Xperia SP maintainers.
-	label-Code-Review = -2..+2 group Sony Xperia SP maintainers.
-	label-Verified = -1..+1 group Sony Xperia SP maintainers.
-	submit = group Sony Xperia SP maintainers.
+	create = group Sony Xperia SP maintainers
+	push = +force group Sony Xperia SP maintainers
+	label-Code-Review = -2..+2 group Sony Xperia SP maintainers
+	label-Verified = -1..+1 group Sony Xperia SP maintainers
+	submit = group Sony Xperia SP maintainers
