huashan: init: Change /proc/cmdline permissions to 0644
 * Change from 0440 to 0644 permissions for telephony

Change-Id: I3287b9b01528a62d2d28fbae709f4998c7a43d43

--- a/rootdir/init.board.radio.rc
+++ b/rootdir/init.board.radio.rc
@@ -4,6 +4,7 @@ on boot
     chmod 2770 /dev/socket/qmux_radio
     mkdir /dev/socket/qmux_audio 0770 media audio
     chmod 2770 /dev/socket/qmux_audio
+    chmod 0644 /proc/cmdline
 
 service netmgrd /system/bin/netmgrd
     class main
