huashan: sepolicy: Cleanup for mpdecision readproc
 * Remove unneeded sepolicy
 * Set the mpdecision class to main (disabled)

Change-Id: Ic839fa58ad83d08daabb9f28ea7da230b6d4ca20

--- a/rootdir/init.board.perf.rc
+++ b/rootdir/init.board.perf.rc
@@ -109,7 +109,7 @@ on property:sys.boot_completed=1
     write /sys/kernel/mm/ksm/run 1
 
 service mpdecision /system/bin/mpdecision --avg_comp
-    class late_start
+    class main
     user root
     group root readproc
     socket mpdecision stream 0660 root system
